[package]
name = "ina233"
version = "0.1.0"
edition = "2021"
description = "A Rust driver for the Texas Instruments INA233 power monitor."
license = "MIT"

[dependencies]
embedded-hal = "1.0.0"
uom = { version = "0.36.0", default-features = false, features = ["f32", "si"] }

[features]
no-verify = []
